--- a/test/views/newdlePage.handlebars
+++ b/test/views/newdlePage.handlebars
@@ -2,7 +2,7 @@
 <html>
 	{{> header}}
 		<main class="newdle-container">
-			Welcome to Newdle! Created by Chris, Jacob, Cole, and Ethan!
+			Welcome to Newdle! Created by Chris, Jacob, Cory, and Ethan!
 		</main>
 
 </html>
