--- a/test/views/layouts/main.handlebars
+++ b/test/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Tweeter</title>
+    <title>Newdle</title>
 
     <!-- This is a stylesheet that includes the font you should use -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
