--- a/views/displayNewdlePage.handlebars
+++ b/views/displayNewdlePage.handlebars
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     {{> header}}
+	{{> signupNewdleModal}}
     <main class="newdle-container">
         {{#each newdle}}
             {{> newdle}}
