--- a/views/partials/createNewdleModal.handlebars
+++ b/views/partials/createNewdleModal.handlebars
@@ -2,8 +2,8 @@
 
 <button type="button" id="create-newdle-button"><i class="fa">Publish</i></button>
 
-<div id="modal-backdrop" class="hidden"></div>
-<div id="create-newdle-modal" class="hidden">
+<div id="modal-backdrop"></div>
+<div id="create-newdle-modal">
   <div class="modal-dialog">
 
     <div class="modal-header">
@@ -13,12 +13,12 @@
 
     <div class="modal-body">
       <div class="newdle-input-element">
-        <label for="newdle-text-input">Beginning</label>
-        <input type="date" id="newdle-text-input"></textarea>
+        <label for="newdle-date-input">Beginning</label>
+        <input type="date" id="newdle-date-input"></textarea>
       </div>
       <div class="newdle-input-element">
-        <label for="newdle-attribution-input">Ending</label>
-        <input type="date" id="newdle-attribution-input">
+        <label for="newdle-date2-input">Ending</label>
+        <input type="date" id="newdle-date2-input">
       </div>
     </div>
 
