--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -3,8 +3,8 @@
 
   <nav class="navbar">
     <ul class="navlist">
-      <li class="navitem navlink active"><a href="#">Home</a></li>
-	  <li class="navitem navlink"><a href="#">Create</a></li>
+      <li class="navitem navlink"><a href="/">Home</a></li>
+	  <li class="navitem navlink"><a href="/create">Create</a></li>
     </ul>
   </nav>
 </header>
