updated refreshDOMContent() to refresh openings

--- a/views/partials/newdle.handlebars
+++ b/views/partials/newdle.handlebars
@@ -6,7 +6,7 @@
       </p>
       <p class="newdle-attribution">
 		
-        <a href="#">{{openings}} openings</a>
+        <a id="openings-count" href="#">{{openings}} openings</a>
       </p>
     </div>
   </article>
