--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,5 +1,5 @@
 <header>
-  <a href="#"><h1 class="site-title">Newdle</h1></a>
+  <a href="/"><h1 class="site-title">Newdle</h1></a>
 
   <nav class="navbar">
     <ul class="navlist">
