Added sign up button which will add all openings for a given file and display each file. User can click on 'openings' to pull up days for that file

--- a/views/displayOpenings.handlebars
+++ b/views/displayOpenings.handlebars
@@ -2,7 +2,7 @@
 <html>
     {{> header}}
     <main class="newdle-container">
-        {{#each newdleObjs}}
+        {{#each fileObjs}}
             {{> openAccount}}
         {{/each}}
     </main>
