--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -5,6 +5,7 @@
     <ul class="navlist">
       <li class="navitem navlink"><a href="/">Home</a></li>
 	  <li class="navitem navlink"><a href="/create">Create</a></li>
+	  <li class="navitem navlink"><a href="/sign_up">Sign Up</a></li>
     </ul>
   </nav>
 </header>
