--- a/views/partials/openAccount.handlebars
+++ b/views/partials/openAccount.handlebars
@@ -1,10 +1,10 @@
 <article class="newdle">
     <div class="newdle-content">
       <p class="newdle-text">
-		{{id}}
+		Account: {{id}}
       </p>
       <p class="newdle-attribution">
-        <a id="openings-count" href="#">{{openings}} openings</a>
+        <a id="openings-count" href="{{id}}">{{openings}} openings</a>
       </p>
     </div>
 </article>
