individual newdles will display sign up button when an account is selected after 'sign up' link is pressed

--- a/views/displayNewdlePage.handlebars
+++ b/views/displayNewdlePage.handlebars
@@ -4,7 +4,7 @@
 	{{> signupNewdleModal}}
     <main class="newdle-container">
         {{#each newdle}}
-            {{> newdle}}
+            {{> signupNewdle}}
         {{/each}}
     </main>
 </html>
