--- a/views/newdlePage.handlebars
+++ b/views/newdlePage.handlebars
@@ -2,7 +2,9 @@
 <html>
 	{{> header}}
 		<main class="newdle-container">
+		<p class="welcome-text">
 			Welcome to Newdle! Created by Chris, Jacob, Cory, and Ethan!
+			</p>
 		</main>
 
 </html>
