--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,7 @@
     <meta charset="utf-8">
     <title>Newdle</title>
 
-    <!-- This is a stylesheet that includes the font you should use -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
-
-    <!-- This is a 3rd-party stylesheet for Font Awesome: http://fontawesome.io/ -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen">
-
+    <link href="https://fonts.googleapis.com/css?family=Bitter:100,400,700" rel="stylesheet">
     <link rel="stylesheet" href="/style.css" media="screen">
 
   </head>
