--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,6 +1,7 @@
 <header>
   <a href="/"><h1 class="site-title">Newdle</h1></a>
 
+  <div class="navbar-div">
   <nav class="navbar">
     <ul class="navlist">
       <li class="navitem navlink"><a href="/">Home</a></li>
