added server response to write changes made to a newdle

--- a/views/partials/openAccount.handlebars
+++ b/views/partials/openAccount.handlebars
@@ -4,7 +4,7 @@
 		Account: {{id}}
       </p>
       <p class="newdle-attribution">
-        <a id="openings-count" href="#" onclick="initSignupView({{id}})">{{openings}} openings</a>
+        <a id="account-openings-count" href="#" onclick="initSignupView({{id}})">{{openings}} openings</a>
       </p>
     </div>
 </article>
