--- a/views/partials/signupNewdleModal.handlebars
+++ b/views/partials/signupNewdleModal.handlebars
@@ -14,6 +14,8 @@
 			
 			
 		</div>
+		<label from="input-signup-name" id="name-label">Name:</label>
+		<input id="input-signup-name" class="newdle-input-element" type="text" />
     </div>
 
     <div class="modal-footer">
