added alert when publishing, and updated project info

--- a/views/newdlePage.handlebars
+++ b/views/newdlePage.handlebars
@@ -2,8 +2,9 @@
 <html>
 	{{> header}}
 		<main class="newdle-container">
-		<p class="welcome-text">
-			Welcome to Newdle! Created by Chris, Jacob, Cory, and Ethan!
+            <p class="welcome-text">
+                Welcome to Newdle! Created by Chris, Jacob, Cory, and Ethan!<br>
+                Newdle is a simple and easy to use scheduler. To create a Newdle, just navigate to the create page on the left and create your range of dates for the scheduler to populate, after that, you can edit each time for that date individually! To sign up for a date, all you need to do is navigate to the sign up page, choose which newdle you would like to sign up for, and then choose a day and time to sign up on!
 			</p>
 		</main>
 
